# lightningmcp

./: README.md  lightningmcp.py  main.py  pyproject.toml  tech.md
api/: routes.py
core/: cache.py  engine.py  security.py
data/: storage.py
monitoring/: metrics.py
orchestrator/: toolchain.py
tests/: test_core.py
